# agm

./: Cargo.toml  README.md  mise.toml
.cursor/: mcp.json
crates/agm/: Cargo.toml
crates/agm-core/: Cargo.toml
crates/agm-core/src/: harness.rs  lib.rs  registry.rs  skills.rs
crates/agm/src/: app.rs  main.rs
src/: main.rs
src/cli/: app.rs  args.rs
src/core/: config.rs  harness.rs  skills.rs
tests/: cli.rs
