[package]
name = "agm"
version = "0.0.1"
edition = "2024"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
dirs = "6"
octocrab = "0.43"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
