[package]
name = "agm-core"
version.workspace = true
edition.workspace = true

[dependencies]
base64 = { workspace = true }
color-eyre = { workspace = true }
dirs = { workspace = true }
octocrab = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
