[package]
name = "agm"
version.workspace = true
edition.workspace = true

[dependencies]
agm-core = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
